[project]
name = "pyhttp-util"
version = "0.1.0"
description = "is a robust, strictly-typed Python library designed to simplify and standardize the manipulation of HTTP headers, authentication, and timeout configurations. It ensures compliance with RFC 7230 and provides a developer-friendly API for building and validating HTTP-related data structures."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "multidict>=6.7.0",
]
