[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhttp-util"
version = "0.1.0"
description = "is a robust, strictly-typed Python library designed to simplify and standardize the manipulation of HTTP headers, authentication, and timeout configurations. It ensures compliance with RFC 7230 and provides a developer-friendly API for building and validating HTTP-related data structures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "multidict>=6.7.0",
]
authors = [{ name = "GrehBan", email = "maximfeedback19@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 79
src = ["pyhttp_util", "tests"]
target-version = "py310"
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "dev",
    "scripts",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "I",   # isort (встроен в ruff)
    "UP",  # pyupgrade
    "T10", # flake8-debugger
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pyhttp_util"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[tool.isort]
profile = "ruff"
line_length = 79
